<resources>
	<string name="app_name">TuxGuitar</string>
	<string name="global_error_message">An unexpected error has occurred</string>
	<string name="global_exit_confirm_message">Are you sure you want to exit?</string>
	<string name="global_button_ok">OK</string>
	<string name="global_button_cancel">Cancel</string>
	<string name="global_button_clean">Clean</string>
	<string name="global_button_add">Add</string>
	<string name="global_spinner_select_option">-- Select --</string>
	<string name="action_menu_edit">Edit</string>
	<string name="action_menu_view">View</string>
	<string name="action_menu_composition">Composition</string>
	<string name="action_menu_track">Track</string>
	<string name="action_menu_measure">Measure</string>
	<string name="action_menu_beat">Beat</string>
	<string name="action_menu_duration">Duration</string>
	<string name="action_menu_dynamic">Dynamic</string>
	<string name="action_menu_effects">Effects</string>
	<string name="action_menu_transport">Player</string>
	<string name="action_menu_settings">Settings</string>
	<string name="action_tab_keyboard_toggle">Toggle Keyboard</string>
	<string name="action_file_new">New</string>
	<string name="action_file_open">Open</string>
	<string name="action_file_save">Save</string>
	<string name="action_file_save_as">Save As</string>
	<string name="action_undo">Undo</string>
	<string name="action_redo">Redo</string>
	<string name="action_voice_1">Select Voice 1</string>
	<string name="action_voice_2">Select Voice 2</string>
	<string name="action_copy">Copy</string>
	<string name="action_paste">Paste</string>
	<string name="action_view_channel_list">Instruments</string>
	<string name="action_view_layout_show_score">Show Score</string>
	<string name="action_view_layout_show_chord_name">Show Chord Names</string>
	<string name="action_view_layout_show_chord_diagram">Show Chord Diagrams</string>
	<string name="action_transport_play">Play/Pause Song</string>
	<string name="action_transport_stop">Stop Playing</string>
	<string name="action_transport_metronome">Metronome</string>
	<string name="action_transport_count_down">Count In</string>
	<string name="action_transport_mode">Play Mode</string>
	<string name="action_transport_set_loop_start">Set loop start point</string>
	<string name="action_transport_set_loop_end">Set loop end point</string>
	<string name="action_transport_highlight_played_beat">Highlight Played Beat</string>
	<string name="action_go_up">Move cursor up</string>
	<string name="action_go_down">Move cursor down</string>
	<string name="action_go_left">Move cursor left</string>
	<string name="action_go_right">Move cursor right</string>
	<string name="action_change_tempo">Change Tempo</string>
	<string name="action_change_clef">Change Clef</string>
	<string name="action_change_key_signature">Change Key Signature</string>
	<string name="action_change_time_signature">Change Time Signature</string>
	<string name="action_change_triplet_feel">Change Triplet Feel</string>
	<string name="action_change_repeat_open">Open Repeat</string>
	<string name="action_change_repeat_close">Close Repeat</string>
	<string name="action_change_repeat_alternative">Alternative Repeats</string>
	<string name="action_change_properties">Properties</string>
	<string name="action_track_first">First Track</string>
	<string name="action_track_previous">Previous Track</string>
	<string name="action_track_next">Next Track</string>
	<string name="action_track_last">Last Track</string>
	<string name="action_track_add">Add Track</string>
	<string name="action_track_clone">Clone Track</string>
	<string name="action_track_remove">Remove Track</string>
	<string name="action_track_move_up">Move Track up</string>
	<string name="action_track_move_down">Move Track down</string>
	<string name="action_track_change_solo">Set Track solo</string>
	<string name="action_track_change_mute">Set Track mute</string>
	<string name="action_track_set_name">Name</string>
	<string name="action_track_set_channel">Instrument</string>
	<string name="action_track_change_tuning">Tuning</string>
	<string name="action_track_change_string_count">Line Count</string>
	<string name="action_measure_first">First Measure</string>
	<string name="action_measure_previous">Previous Measure</string>
	<string name="action_measure_next">Next Measure</string>
	<string name="action_measure_last">Last Measure</string>
	<string name="action_measure_add">Add Measure</string>
	<string name="action_measure_clean">Clean Measure</string>
	<string name="action_measure_remove">Remove Measure</string>
	<string name="action_fix_voice">Fix Voice</string>
	<string name="action_change_tied_note">Tied Note</string>
	<string name="action_clean_beat">Clean Beat</string>
	<string name="action_decrement_note_semitone">Decrement Semitone</string>
	<string name="action_increment_note_semitone">Increment Semitone</string>
	<string name="action_delete_note_or_rest">Delete Note or Rest</string>
	<string name="action_insert_rest_beat">Insert Rest Beat</string>
	<string name="action_move_beats_left">Move one Beat left</string>
	<string name="action_move_beats_right">Move one Beat right</string>
	<string name="action_remove_unused_voice">Remove unused Voice</string>
	<string name="action_set_voice_auto">Auto Stems</string>
	<string name="action_set_voice_down">Stems down</string>
	<string name="action_set_voice_up">Stems up</string>
	<string name="action_shift_note_down">Shift one String down</string>
	<string name="action_shift_note_up">Shift one String up</string>
	<string name="action_change_stroke">Up/Downstroke (brush)</string>
	<string name="action_change_pickstroke">Pick stroke up/down</string>
	<string name="action_change_text">Insert Text</string>
	<string name="action_set_duration_whole">Whole</string>
	<string name="action_set_duration_half">Half</string>
	<string name="action_set_duration_quarter">Quarter</string>
	<string name="action_set_duration_eighth">Eighth</string>
	<string name="action_set_duration_sixteenth">Sixteenth</string>
	<string name="action_set_duration_thirtysecond">Thirty-Second</string>
	<string name="action_set_duration_sixtyfourth">Sixty-Fourth</string>
	<string name="action_set_duration_dotted">Dotted</string>
	<string name="action_set_duration_doubledotted">Double-Dotted</string>
	<string name="action_set_duration_division_type">Division Type (Tuplet)</string>
	<string name="action_set_duration_division_type_1">No Division</string>
	<string name="action_set_duration_division_type_3">3 - Triplet</string>
	<string name="action_set_duration_division_type_5">5 - Quintuplet</string>
	<string name="action_set_duration_division_type_6">6 - Sextuplet</string>
	<string name="action_set_duration_division_type_7">7 - Septuplet</string>
	<string name="action_set_duration_division_type_9">9 - Nonuplet</string>
	<string name="action_set_duration_division_type_10">10 - Decuplet</string>
	<string name="action_set_duration_division_type_11">11 - Undecuplet</string>
	<string name="action_set_duration_division_type_12">12 - Dodecuplet</string>
	<string name="action_set_duration_division_type_13">13 - Tridecuplet</string>
	<string name="action_set_velocity_ppp">Piano Pianissimo</string>
	<string name="action_set_velocity_pp">Pianissimo</string>
	<string name="action_set_velocity_p">Piano</string>
	<string name="action_set_velocity_mp">Mezzo Piano</string>
	<string name="action_set_velocity_mf">Mezzo Forte</string>
	<string name="action_set_velocity_f">Forte</string>
	<string name="action_set_velocity_ff">Fortissimo</string>
	<string name="action_set_velocity_fff">Forte Fortissimo</string>
	<string name="action_change_vibrato">Vibrato</string>
	<string name="action_change_bend">Bend</string>
	<string name="action_change_dead_note">Dead Note</string>
	<string name="action_change_slide">Slide</string>
	<string name="action_change_hammer">Hammer-on/Pull-off</string>
	<string name="action_change_tremolo_bar">Tremolo Bar</string>
	<string name="action_change_ghost_note">Ghost Note</string>
	<string name="action_change_accentuated_note">Accentuated Note</string>
	<string name="action_change_heavy_accentuated_note">Heavy Accentuated Note</string>
	<string name="action_change_harmonic">Harmonic</string>
	<string name="action_change_grace">Grace Note</string>
	<string name="action_change_trill">Trill</string>
	<string name="action_change_tremolo_picking">Tremolo Picking</string>
	<string name="action_change_palm_mute">Palm Mute</string>
	<string name="action_change_let_ring">Let Ring</string>
	<string name="action_change_staccato">Staccato</string>
	<string name="action_change_tapping">Tapping</string>
	<string name="action_change_slapping">Slapping</string>
	<string name="action_change_popping">Popping</string>
	<string name="action_change_fade_in">Fade in</string>
	<string name="action_channel_list_add">Add</string>
	<string name="action_channel_list_item_edit">Edit</string>
	<string name="action_channel_list_item_remove">Remove</string>
	<string name="action_channel_list_item_remove_confirm_question">Are you sure you want to remove this instrument?</string>
	<string name="action_track_tuning_list_item_edit">Edit</string>
	<string name="action_track_tuning_list_item_remove">Remove</string>
	<string name="main_drawer_file">File</string>
	<string name="main_drawer_tracks">Tracks</string>
	<string name="storage_default_filename">Untitled</string>
	<string name="storage_export_to">Export %1$s</string>
	<string name="storage_saf_file_format_chooser_title">Select a File Format</string>
	<string name="storage_saf_assets_provider_title">Demo Songs</string>
	<string name="browser_refresh">Refresh</string>
	<string name="browser_back">Back</string>
	<string name="browser_root">Home</string>
	<string name="browser_settings">Settings</string>
	<string name="browser_save_label">Save</string>
	<string name="browser_add_collection">Add Collection</string>
	<string name="browser_remove_collection">Remove Collection</string>
	<string name="browser_file_overwrite_question">This file already exists. Do you want to overwrite it?</string>
	<string name="browser_file_overwrite_readonly_error">This file already exists and cannot be modified</string>
	<string name="browser_element_icon_description">Browser Element</string>
	<string name="browser_collections_dlg_title">Collection Browser</string>
	<string name="browser_collections_dlg_remove_confirm_question">Are you sure you want to remove this collection?</string>
	<string name="browser_settings_fs_mount_point_dlg_title">Select a storage mount point</string>
	<string name="browser_settings_fs_dlg_title">File System Collection</string>
	<string name="tempo_dlg_tempo_label">Tempo:</string>
	<string name="tempo_dlg_options_apply_to_song">Apply this Tempo in the whole Song</string>
	<string name="tempo_dlg_options_apply_to_end">Apply this Tempo to the end</string>
	<string name="tempo_dlg_options_apply_to_next_marker">Apply this Tempo to the next Tempo Marker</string>
	<string name="measure_copy_dlg_from_label">From:</string>
	<string name="measure_copy_dlg_to_label">To:</string>
	<string name="measure_copy_dlg_options_all_tracks">All Tracks</string>
	<string name="transport_mode_dlg_simple">Simple Mode</string>
	<string name="transport_mode_dlg_trainer">Training Mode</string>
	<string name="transport_mode_dlg_simple_tempo_percent_label">Percentage of Tempo:</string>
	<string name="transport_mode_dlg_simple_loop">Play looped</string>
	<string name="transport_mode_dlg_trainer_tempo_percent_from_label">Tempo:</string>
	<string name="transport_mode_dlg_trainer_tempo_percent_to_label">To:</string>
	<string name="transport_mode_dlg_trainer_tempo_increment_label">Increment by:</string>
	<string name="transport_mode_dlg_loop_range_label">Loop Range</string>
	<string name="transport_mode_dlg_loop_range_from_label">Play from Measure:</string>
	<string name="transport_mode_dlg_loop_range_to_label">Play to Measure:</string>
</resources>