<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_menu_track" >

    <item
        android:id="@+id/action_track_set_name"
        android:title="@string/action_track_set_name"
        android:icon="@drawable/ic_edit_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_track_set_channel"
        android:title="@string/action_track_set_channel"
        android:icon="@drawable/ic_music_note_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_track_remove"
        android:title="@string/action_track_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_track_clone"
        android:title="@string/action_track_clone"/>
    <item
        android:id="@+id/action_track_move_up"
        android:title="@string/action_track_move_up"
        android:visible="false"/>
    <item
        android:id="@+id/action_track_move_down"
        android:title="@string/action_track_move_down"
        android:visible="false"/>
    <item
        android:id="@+id/action_track_change_mute"
        android:checkable="true"
        android:title="@string/action_track_change_mute"/>
    <item
        android:id="@+id/action_track_change_solo"
        android:checkable="true"
        android:title="@string/action_track_change_solo"/>
    <item
        android:id="@+id/action_track_change_tuning"
        android:title="@string/action_track_change_tuning"
        android:visible="false"/>
    <item
        android:id="@+id/action_track_change_string_count"
        android:title="@string/action_track_change_string_count"
        android:visible="false"/>
</menu>