<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_menu_edit" >

    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"/>
    <item
        android:id="@+id/action_paste"
        android:title="@string/action_paste"/>
    <item
        android:id="@+id/action_undo"
        android:title="@string/action_undo"/>
    <item
        android:id="@+id/action_redo"
        android:title="@string/action_redo"/>
    <item
        android:id="@+id/action_voice_1"
        android:title="@string/action_voice_1"/>
    <item
        android:id="@+id/action_voice_2"
        android:title="@string/action_voice_2"/>

</menu>
